Modfied further to fix naming convetion changes. However, there is still a missing headerfile, EposMasterConfig.h, which stops it from compiling. No idea where that is, so CMakeList.text is set to no longer build until that file is found

--- a/epos_manager/docs/EposManagerConfig-usage.dox
+++ b/epos_manager/docs/EposManagerConfig-usage.dox
@@ -1,6 +1,6 @@
 \subsubsection usage Usage
 \verbatim
-<node name="EPOS" pkg="EposManager" type="EPOS">
+<node name="EPOS" pkg="epos_manager" type="EPOS">
   <param name="Position_Profile_Velocity" type="int" value="0" />
   <param name="Position_Profile_Acceleration" type="int" value="0" />
   <param name="Position_Profile_Deceleration" type="int" value="0" />
